--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbContext": "Server=(localdb)\\mssqllocaldb;Database=DbContext-28f8d750-ae39-4a9f-a984-7066d9b27b25;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
