criar_tela_lojaa

--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjetoPETContext": "Server=(localdb)\\mssqllocaldb;Database=ProjetoPETContext-e322e3eb-23cc-4e81-a867-a5618531f635;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
