--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjetoPETContext": "Server=(localdb)\\mssqllocaldb;Database=ProjetoPETContext-473a5f04-20ce-4ed9-b04f-aeae7df32611;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
