--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BancoContext": "Server=.;Database=DbContext-28f8d750-ae39-4a9f-a984-7066d9b27b25;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BancoContext": "Server=(localdb)\\mssqllocaldb;Database=BancoContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
