--- a/ProjetoPET/ProjetoPET.csproj
+++ b/ProjetoPET/ProjetoPET.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
+    <Folder Include="wwwroot\images\LojasPhotos\" />
   </ItemGroup>
 
   <ItemGroup>
