Tela De Adocao em andamento

--- a/ProjetoPET/ProjetoPET.csproj
+++ b/ProjetoPET/ProjetoPET.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
-    <Folder Include="wwwroot\images\LojasPhotos\" />
+    <Folder Include="wwwroot\images\AdocaoPhotos\" />
   </ItemGroup>
 
   <ItemGroup>
