--- a/ProjetoPET/appsettings.Development.json
+++ b/ProjetoPET/appsettings.Development.json
@@ -5,5 +5,16 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BancoContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BancoContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "EmailSender": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSSL": true,
+    "UserName": "fabrica@ms.senac.br",
+    "Password": "xxxxxxx"
   }
 }
