--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -6,6 +6,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BancoContext": "Server=(localdb)\\mssqllocaldb;Database=BancoContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BancoContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BancoContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "EmailSender": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSSL": true,
+    "UserName": "fabrica@ms.senac.br",
+    "Password": "xxxxxxxxxx"
   }
 }
