--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -8,11 +8,15 @@
   "ConnectionStrings": {
     "BancoContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BancoContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "EmailSender": {
+  "Email": {
     "Host": "smtp.gmail.com",
-    "Port": "587",
-    "EnableSSL": true,
-    "UserName": "fabrica@ms.senac.br",
-    "Password": "xxxxxxxxxx"
+    "Port": 587,
+    "Username": "gmaybatsu@Gmail.com",
+    "Password": "terraria123",
+    "SMTP": {
+      "starttls": {
+        "enable": true
+      }
+    }
   }
 }
