Criacao_de_Servico_de_Envio_De_Email

--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -11,8 +11,8 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "gmaybatsu@Gmail.com",
-    "Password": "terraria123",
+    "Username": "COLOCA SEU EMAIL AKI",
+    "Password": "COLOQUE SUA SENHA AKI",
     "SMTP": {
       "starttls": {
         "enable": true
