--- a/ProjetoPET/ProjetoPET.csproj
+++ b/ProjetoPET/ProjetoPET.csproj
@@ -31,6 +31,7 @@
     <Folder Include="Areas\Identity\Services\" />
     <Folder Include="Helper\" />
     <Folder Include="wwwroot\images\AdocaoPhotos\" />
+    <Folder Include="wwwroot\images\NovaPasta\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
