--- a/ProjetoPET/package.json
+++ b/ProjetoPET/package.json
@@ -9,6 +9,13 @@
     "jquery-validation-unobtrusive": "3.2.10"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap-datepicker": "^1.9.0",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "jquery-fancybox": "^3.1.0",
     "jquery-ui": "^1.12.1",
     "owl.carousel": "^2.3.4",
