--- a/ProjetoPET/appsettings.json
+++ b/ProjetoPET/appsettings.json
@@ -11,8 +11,8 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "anapaulaa.apds9292@gmail.com",
-    "Password": "mariaamaral1",
+    "Username": "projetopet123@gmail.com",
+    "Password": "123projetopet",
     "SMTP": {
       "starttls": {
         "enable": true
